[package]
name = "pub_source"
version = "0.1.0"
edition = "2024"
description = "Make everything public"
license = "MIT"
repository = "https://github.com/TabulateJarl8/pub_source"
readme = "README.md"
keywords = ["macro", "visibility", "testing"]
categories = ["rust-patterns"]

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0.114"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
